--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -5,7 +5,6 @@ on:
 
 jobs:
   download_metrics:
-    # Klarer Job-Name für die Actions-UI
     name: Download ${{ matrix.metric }} | ${{ matrix.part }} | ${{ matrix.symbol }}
     runs-on: ubuntu-latest
 
@@ -13,12 +12,10 @@ jobs:
       matrix:
         metric: [open_interest, funding_rate, liquidity]
         part:   [part1, part2]
-        # Nur die 6 gewünschten Symbole
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
-      max-parallel: 36  # alle Kombis gleichzeitig
+      max-parallel: 36
 
     env:
-      # DEINE neue Proxy-URL hier:
       PROXY_URL: https://crypto-signal-app-1.onrender.com
       GIT_USER: github-actions[bot]
       GIT_EMAIL: github-actions[bot]@users.noreply.github.com
@@ -38,7 +35,6 @@ jobs:
       - name: Metrics herunterladen
         shell: bash
         run: |
-          # Part1 oder Part2 definieren
           if [[ "${{ matrix.part }}" == "part1" ]]; then
             START="2020-01-01"
             END="2022-12-31"
@@ -48,7 +44,6 @@ jobs:
           fi
 
           chmod +x metrics/download_metrics_range.sh
-
           PROXY_URL="${PROXY_URL}" \
             metrics/download_metrics_range.sh \
               "${{ matrix.metric }}" \
@@ -63,14 +58,11 @@ jobs:
           git config user.name "${GIT_USER}"
           git config user.email "${GIT_EMAIL}"
 
-          # Immer auf aktuellen Remote-Stand setzen, lokale Dateien bleiben erhalten
           git fetch origin main
           git reset --mixed origin/main
 
-          # Stage alle neuen/geänderten JSONs für dieses Symbol/Metric/Part
           git add metrics/${{ matrix.part }}/${{ matrix.metric }}/${{ matrix.symbol }}_*.json
 
-          # Commit & Push nur, wenn Änderungen vorliegen
           if ! git diff --cached --quiet; then
             git commit -m "chore(metrics): update ${{ matrix.metric }}/${{ matrix.part }}/${{ matrix.symbol }} [skip ci]"
             git push origin HEAD:main
