--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         symbol:   [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
         interval: [1m,5m,15m,1h,4h]
-      max-parallel: 24  # 6 Symbole × 4 Intervalle
+      max-parallel: 24
 
     env:
       GIT_USER: github-actions[bot]
@@ -31,26 +31,25 @@ jobs:
           sudo apt-get install -y curl unzip jq
 
       - name: History herunterladen
-        shell: bash
         run: |
           chmod +x historical/download_history_range.sh
           historical/download_history_range.sh \
             "${{ matrix.symbol }}" \
             "${{ matrix.interval }}"
 
-      - name: Änderungen committen & pushen (robust)
+      - name: Änderungen committen & pushen (autostash)
         shell: bash
         run: |
           git config user.name "${GIT_USER}"
           git config user.email "${GIT_EMAIL}"
 
-          # Auf neuesten Remote-Stand setzen, lokale CSVs bleiben erhalten
-          git fetch origin main
-          git reset --mixed origin/main
+          # Pull mit Autostash, um Remote-Updates zu integrieren ohne lokale neuen Files zu verlieren
+          git pull --rebase --autostash origin main
 
-          # Stage alle neuen/geänderten CSVs unter historical/
+          # Stage nur neu hinzugefügte CSVs
           git add historical/${{ matrix.symbol }}/${{ matrix.interval }}/*.csv
 
+          # Commit & Push, falls es neue Dateien gibt
           if ! git diff --cached --quiet; then
             git commit -m "chore(history): add rolling ${{ matrix.symbol }} ${{ matrix.interval }} [skip ci]"
             git push origin HEAD:main
