--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -16,7 +16,8 @@ jobs:
       max-parallel: 36
 
     env:
-      PROXY_URL: https://crypto-signal-app-1.onrender.com
+      # Dein Railway-Proxy:
+      PROXY_URL: https://cryptosignalapp-production.up.railway.app
       GIT_USER: github-actions[bot]
       GIT_EMAIL: github-actions[bot]@users.noreply.github.com
 
@@ -35,6 +36,7 @@ jobs:
       - name: Metrics herunterladen
         shell: bash
         run: |
+          # Zeitraum für part1 vs. part2 festlegen
           if [[ "${{ matrix.part }}" == "part1" ]]; then
             START="2020-01-01"; END="2022-12-31"
           else
@@ -56,9 +58,12 @@ jobs:
           git config user.name "${GIT_USER}"
           git config user.email "${GIT_EMAIL}"
 
+          # Remote-Stand frisch holen
           git fetch origin main
+          # Setze Arbeitskopie & Index auf origin/main (eigene JSONs bleiben erhalten)
           git reset --mixed origin/main
 
+          # Stage alle JSONs für dieses Symbol/Metric/Part
           git add metrics/${{ matrix.part }}/${{ matrix.metric }}/${{ matrix.symbol }}_*.json
 
           if ! git diff --cached --quiet; then
