--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  # ─────────────────────────────────────────────────────────────────────────────
-  # 1. Download-Matrix (Fan-Out): lädt alle JSONs parallel und speichert sie als Artifact
-  # ─────────────────────────────────────────────────────────────────────────────
+  # ────────────────────────────────────────────────────────────────────────────
+  # 1. Download-Matrix (Fan-Out)
+  # ────────────────────────────────────────────────────────────────────────────
   download_matrix:
     name: 🔄 Download ${{ matrix.metric }} | ${{ matrix.part }} | ${{ matrix.symbol }}
     runs-on: ubuntu-latest
@@ -56,9 +56,9 @@ jobs:
           path: metrics/${{ matrix.part }}/${{ matrix.metric }}/${{ matrix.symbol }}/*.json
           if-no-files-found: ignore
 
-  # ─────────────────────────────────────────────────────────────────────────────
-  # 2. Aggregator & Commit (Fan-In): zieht alle Artifacts, merged sie ins Repo und pusht
-  # ─────────────────────────────────────────────────────────────────────────────
+  # ────────────────────────────────────────────────────────────────────────────
+  # 2. Aggregator & Commit (Fan-In)
+  # ────────────────────────────────────────────────────────────────────────────
   aggregate_and_push:
     name: 📦 Aggregate & Push Metrics
     runs-on: ubuntu-latest
