--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -4,58 +4,103 @@ on:
   workflow_dispatch:
 
 jobs:
-  download_history:
-    name: History | ${{ matrix.symbol }} | ${{ matrix.interval }}
+  # ────────────────────────────────────────────────────────────────────────────
+  # 1. Fan-Out: pro Symbol×Interval ein Job, lädt CSVs der letzten 30 Tage hoch
+  # ────────────────────────────────────────────────────────────────────────────
+  download_matrix:
+    name: 📥 History | ${{ matrix.symbol }} | ${{ matrix.interval }}
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         symbol:   [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
         interval: [1m,5m,15m,1h,4h]
-      max-parallel: 24  # 6 Symbole × 4 Intervalle parallel
+      max-parallel: 12
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install tools
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Download last 30 days of history
+        shell: bash
+        run: |
+          chmod +x historical/download_history_range.sh
+          # heutiges Datum
+          END=$(date -I)
+          # 30 Tage davor
+          START=$(date -I -d "$END -30 days")
+          # Script lädt inclusive END
+          historical/download_history_range.sh \
+            "${{ matrix.symbol }}" \
+            "${{ matrix.interval }}" \
+            "$START" \
+            "$END"
+
+      - name: Upload CSV-Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: history-${{ matrix.symbol }}-${{ matrix.interval }}
+          path: historical/${{ matrix.symbol }}/${{ matrix.interval }}/*.csv
+          if-no-files-found: ignore
+
+  # ────────────────────────────────────────────────────────────────────────────
+  # 2. Fan-In: sammelt alle CSV-Artefakte ein, merged sie ins Repo und pusht
+  # ────────────────────────────────────────────────────────────────────────────
+  aggregate_and_push:
+    name: 📦 Aggregate & Push History
+    runs-on: ubuntu-latest
+    needs: download_matrix
+    if: needs.download_matrix.result == 'success'
 
     env:
       GIT_USER: github-actions[bot]
       GIT_EMAIL: github-actions[bot]@users.noreply.github.com
 
     steps:
-      - name: Checkout mit Schreibrechten
+      - name: Checkout fresh
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           persist-credentials: true
 
-      - name: Tools installieren
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl unzip jq
+      - name: Download all history-artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./history-artifacts
 
-      - name: History herunterladen
-        shell: bash
+      - name: Clean rolling folders
         run: |
-          chmod +x historical/download_history_range.sh
-          historical/download_history_range.sh \
-            "${{ matrix.symbol }}" \
-            "${{ matrix.interval }}"
+          # wir halten nur den Unterordner part2/rolling
+          rm -rf historical/*/*/rolling
+          mkdir -p historical
 
-      - name: Änderungen committen & pushen (robust)
+      - name: Copy artifacts into historical/
+        run: |
+          find history-artifacts -type f -name '*.csv' | while read src; do
+            # src = history-artifacts/<symbol>-<interval>/<file>.csv
+            # wir extrahieren symbol und interval
+            base=$(basename "$(dirname "$src")")
+            symbol="${base%%-*}"
+            interval="${base#*-}"
+            dst="historical/${symbol}/${interval}/$(basename "$src")"
+            mkdir -p "$(dirname "$dst")"
+            mv "$src" "$dst"
+          done
+
+      - name: Commit & Push all History
         shell: bash
         run: |
           git config user.name "${GIT_USER}"
           git config user.email "${GIT_EMAIL}"
-
-          # 1) Neueste Remote-Commits holen
           git fetch origin main
-          # 2) Arbeitskopie & Index auf remote/main setzen (lokale neuen CSVs bleiben erhalten)
           git reset --mixed origin/main
-
-          # 3) Nur neue/ geänderte CSVs für dieses Symbol/Intervall stage-en
-          git add historical/${{ matrix.symbol }}/${{ matrix.interval }}/*.csv
-
-          # 4) Commit + Push, wenn es Änderungen gibt
+          git add historical
           if ! git diff --cached --quiet; then
-            git commit -m "chore(history): add rolling ${{ matrix.symbol }} ${{ matrix.interval }} [skip ci]"
+            git commit -m "chore(history): rolling last 30d [skip ci]"
             git push origin HEAD:main
           else
-            echo "🚀 Keine neuen Dateien für ${{ matrix.symbol }}/${{ matrix.interval }}"
+            echo "🚀 Keine Änderungen bei History"
           fi
