--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -4,103 +4,47 @@ on:
   workflow_dispatch:
 
 jobs:
-  # ────────────────────────────────────────────────────────────────────────────
-  # 1. Fan-Out: pro Symbol×Interval ein Job, lädt CSVs der letzten 30 Tage hoch
-  # ────────────────────────────────────────────────────────────────────────────
-  download_matrix:
-    name: 📥 History | ${{ matrix.symbol }} | ${{ matrix.interval }}
+  download-history:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        symbol:   [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
+        symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
         interval: [1m,5m,15m,1h,4h]
-      max-parallel: 12
-
     steps:
-      - name: Checkout
+      - name: Checkout Repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-      - name: Install tools
-        run: sudo apt-get update && sudo apt-get install -y jq
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
 
-      - name: Download last 30 days of history
-        shell: bash
+      - name: Download History for ${{ matrix.symbol }} @ ${{ matrix.interval }}
         run: |
           chmod +x historical/download_history_range.sh
-          # heutiges Datum
-          END=$(date -I)
-          # 30 Tage davor
-          START=$(date -I -d "$END -30 days")
-          # Script lädt inclusive END
+          # wir laden die letzten 30 Tage bis gestern
+          START=$(date -I -d "30 days ago")
+          END=$(date -I -d "yesterday")
           historical/download_history_range.sh \
             "${{ matrix.symbol }}" \
             "${{ matrix.interval }}" \
             "$START" \
-            "$END"
+            "$END" \
+            part2
 
-      - name: Upload CSV-Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: history-${{ matrix.symbol }}-${{ matrix.interval }}
-          path: historical/${{ matrix.symbol }}/${{ matrix.interval }}/*.csv
-          if-no-files-found: ignore
-
-  # ────────────────────────────────────────────────────────────────────────────
-  # 2. Fan-In: sammelt alle CSV-Artefakte ein, merged sie ins Repo und pusht
-  # ────────────────────────────────────────────────────────────────────────────
-  aggregate_and_push:
-    name: 📦 Aggregate & Push History
-    runs-on: ubuntu-latest
-    needs: download_matrix
-    if: needs.download_matrix.result == 'success'
-
-    env:
-      GIT_USER: github-actions[bot]
-      GIT_EMAIL: github-actions[bot]@users.noreply.github.com
-
-    steps:
-      - name: Checkout fresh
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          persist-credentials: true
-
-      - name: Download all history-artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: ./history-artifacts
-
-      - name: Clean rolling folders
-        run: |
-          # wir halten nur den Unterordner part2/rolling
-          rm -rf historical/*/*/rolling
-          mkdir -p historical
-
-      - name: Copy artifacts into historical/
-        run: |
-          find history-artifacts -type f -name '*.csv' | while read src; do
-            # src = history-artifacts/<symbol>-<interval>/<file>.csv
-            # wir extrahieren symbol und interval
-            base=$(basename "$(dirname "$src")")
-            symbol="${base%%-*}"
-            interval="${base#*-}"
-            dst="historical/${symbol}/${interval}/$(basename "$src")"
-            mkdir -p "$(dirname "$dst")"
-            mv "$src" "$dst"
-          done
-
-      - name: Commit & Push all History
-        shell: bash
+      - name: Commit new CSVs
         run: |
           git config user.name "${GIT_USER}"
           git config user.email "${GIT_EMAIL}"
-          git fetch origin main
-          git reset --mixed origin/main
-          git add historical
+          # Nur die neu hinzugefügten CSVs für dieses Symbol/Interval
+          git add historical/${{ matrix.symbol }}/${{ matrix.interval }}/part2/*.csv
+
           if ! git diff --cached --quiet; then
-            git commit -m "chore(history): rolling last 30d [skip ci]"
+            git commit -m "chore(history): add rolling ${{ matrix.symbol }} ${{ matrix.interval }} [skip ci]"
             git push origin HEAD:main
           else
-            echo "🚀 Keine Änderungen bei History"
+            echo "🚀 No new CSVs for ${{ matrix.symbol }} ${{ matrix.interval }}"
           fi
+        env:
+          GIT_USER: github-actions[bot]
+          GIT_EMAIL: github-actions[bot]@users.noreply.github.com
